# AppiT-Pro

./: .env.example  .gitignore  CMakeLists.txt  COMPREHENSIVE_SYSTEM_INSTRUCTIONS.md  DEVELOPMENT.md  HAASP.desktop  README.md  RUNNING.md  build_test.sh  complete_fix.sh  final_fix.sh  final_run_fix.sh  final_working_fix.sh  fix_qml_registration.sh  immediate_fix.sh  install.sh  quick_build.sh  resources.qrc  run_app.sh  run_app_fixed.sh  start.sh  start_haasp_complete.sh  stop_haasp.sh  system_status.py  tasks.json  test_build.sh  test_qml_only.sh  test_simple_qml.sh  universal_build.sh  vcpkg-configuration.json
.cache/clangd/index/: ai_oracle.cpp.E47D577F7C4E5DEA.idx  ai_oracle.hpp.C071D775C51DD059.idx  associative_nexus.cpp.F6E887CCBEC4A9C9.idx  associative_nexus.hpp.838C01865A8303DA.idx  controller.cpp.454DF4F3073C9659.idx  controller.hpp.606C00D5BADC7940.idx  git_service.cpp.879C0B812B028701.idx  git_service.hpp.D7696BE47018208A.idx  main.cpp.FF68AD8BAE3FB869.idx  pilot_orchestrator.cpp.B6A2246726293CE3.idx  pilot_orchestrator.hpp.EE805FBD218034FD.idx  quantum_conduit.cpp.D488261978A23B6A.idx  quantum_conduit.hpp.4B5617A0EC9ECDA4.idx  retrieval_client.cpp.6D627948B2E278E2.idx  retrieval_client.hpp.D543BA8C5D47A4B9.idx
.github/chatmodes/: Apply It Where?.chatmode.md  copilot-instructions.md
.memex/: context.md
cert/: fallback.crt  fallback.key
pilots/: codewright.py  doc_architect.py  remediator.py  sentinel.py
plans/2025-01-28_14-30-00_haasp-git-integration/: plan.md
python/: requirements.txt
python/enrichment_pipeline/: git_intelligence.py
retrieval_service/: __init__.py  faiss_manager.py  fts_manager.py  graph_memory.py  main.py  rag_orchestrator.py  requirements.txt
src/: CMakeLists.txt  main.cpp
src/nucleus/: ai_oracle.cpp  ai_oracle.hpp  associative_nexus.cpp  associative_nexus.hpp  git_service.cpp  git_service.hpp  pilot_orchestrator.cpp  pilot_orchestrator.hpp  quantum_conduit.cpp  quantum_conduit.hpp
src/services/: retrieval_client.cpp  retrieval_client.hpp
src/ui/: controller.cpp  controller.hpp
src/ui/qml/: AdvancedMain.qml  AiCodePanel.qml  BindingEditor.qml  FullAdvancedMain.qml  GitPortal.qml  Hierarchy.qml  InfiniteCanvas.qml  Inspector.qml  Main.qml  NewProjectDialog.qml  OpenRepoDialog.qml  PilotCard.qml  PreviewSurface.qml  PropertyEditor.qml  SettingsPage.qml  SimpleMain.qml  Timeline.qml  TreeItem.qml
truth_pipeline/: model_1_ingestion.py  model_2_credibility.py  model_3_logic.py
voice_service/: __init__.py  vad.py
webapp/: Cargo.toml
webapp/cert/: fallback.crt  fallback.key  localhost.crt  localhost.key
webapp/src/: analytics.rs  git.rs  main.rs  models.rs  templates.rs
webapp/templates/: dashboard.html  repository.html
webapp/webapp/cert/: localhost.crt  localhost.key
