[package]
name = "haasp-insights"
version = "1.0.0"
edition = "2021"
description = "HAASP Insights++ - GitHub-like analytics dashboard"
authors = ["HAASP Team <team@haasp.local>"]

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
hyper = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Git integration  
git2 = "0.18"

# Templating
askama = "0.12"
askama_axum = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# TLS support
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"

# File system watching
notify = "6.0"

# Configuration
config = "0.13"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Analytics and metrics
prometheus = "0.13"

[dev-dependencies]
tower-test = "0.4"